# docs/swagger.json
@@ -51,13 +51,14 @@
                 "summary": "ลงชื่อเข้าใช้งานระบบ",
                 "parameters": [
                     {
-                        "description": "LoginRequest",
-                        "name": "loginRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.LoginRequest"
-                        }
+                        "type": "string",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "password",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -100,13 +101,19 @@
                 "summary": "สมัครเข้าใช้งานระบบ",
                 "parameters": [
                     {
-                        "description": "RegisterRequest",
-                        "name": "register",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.RegisterRequest"
-                        }
+                        "type": "string",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "password",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -120,7 +127,7 @@
             }
         },
         "/users/list": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "bearerToken": []
@@ -145,31 +152,6 @@
         }
     },
     "definitions": {
-        "requests.LoginRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "requests.RegisterRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "responses.Response": {
             "type": "object",
             "properties": {
